--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
         <title>TelegramWebappAngular</title>
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <script src="https://telegram.org/js/telegram-web-app.js?57"></script>
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
-        <script src="https://telegram.org/js/telegram-web-app.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons" />
         <link
             rel="stylesheet"
